# dot-tools

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
dot_tools/resources/: traefik.compose.yaml
dot_tools/scripts/: add_dot_files.py  cpuniq.py  handle_envrc.py  release.py  traefik_run.py
dot_tools/templates/: editorconfig.tmpl  pre-commit-config.yaml  pyproject.tmpl
tests/: dummy_test.py
